--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "type": "library",
     "require": {
         "php": ">=7.2",
-        "pimple/pimple": "^3.3"
+        "pimple/pimple": "^3.3",
+        "overtrue/http": "^1.1",
+        "symfony/cache": "^5.0",
+        "psr/simple-cache": "^1.0",
+        "symfony/event-dispatcher": "^5.0"
     },
     "license": "MIT",
     "authors": [
@@ -18,5 +22,20 @@
         "psr-4": {
             "WorkWeChat\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "WorkWeChat\\Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.1",
+        "phpstan/phpstan": "^0.12.25",
+        "mockery/mockery": "^1.3"
+    },
+    "scripts": {
+        "phpcs": "vendor/bin/php-cs-fixer fix",
+        "phpstan": "vendor/bin/phpstan analyse",
+        "test": "vendor/bin/phpunit"
     }
 }
